# somenergia-kpis

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  dbconfig.example.py  dbt_profiles.example.yml  docker-compose.main.yml  docker-compose.yml  example.env  index.html  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  res_partner_address_test.csv  sqltable_to_csv.py  test_main.py
classes/: models.py
common/: db_utils.py  df_common.py  test_db_utils.py  test_df_common.py  test_utils.py  utils.py
dags/: calcul_potencia_optima_dag.py  dbt_kpis_models_pilotatge_dag.py  erp_legal_person_member_dag.py  erppeek_get_pilotatge_kpis_dag.py  hs_conversations_dag.py  hs_get_conversations_dag.py  hs_get_mailboxes_dag.py  hs_get_tags_dag.py  hs_kpis_pilotatge_dag.py  hs_kpis_pilotatge_dag_v2.py  hs_mailbox_reports_dag.py  hs_transform_conversations_dag.py  kpis_dbt_build_dag.py  meff_update_closing_prices_dag.py  odoo_get_hr_employee_dag.py  omie_price_hour_dag.py  test_mongo_dag.py  tomatic_calls_stats_dag.py
data/: calendari_pagaments_omie.csv  perfils_socies_gran_conversa.sql
datasources/: extract_load_template.py
dbt_kpis/: dbt_project.yml  selectors.yml
docs/: 2023-05-12-timezones.md  index.md  kpi_dev_workflow.md  production_deploy.md
helpscout/: hs_KPI_gcontractes_1.py  hs_get_mailboxes.py
helpscout_crawler/: hs_KPI_gcontractes_1.py
images/: indicadors
meff/: meff_operations.py
migrations/: meff_closing_prices_puppis_cron_to_datalake.sql
neuroenergia/: neuroenergia_operations.py  (+1 more)
(+233 files in other folders)
