[tool.poetry]
name = "somenergia-kpis"
version = "0.1.0"
description = ""
authors = ["Equip de dades de Som Energia <dades@somenergia.coop>"]
readme = "README.md"

packages = [
    { include = "main.py", from = "." }
]

[tool.poetry.scripts]
somenergia-kpis-cli = 'main:app'

[tool.poetry.dependencies]
python = "^3.8.1"
python-helpscout-v2 = "^2.0.0"
sqlalchemy = ">=1.4.27,<2.0.0"
lxml = "^4.9.2"
numpy = "^1.24.2"
openpyxl = "^3.1.1"
pendulum = "^2.1.2"
psycopg2-binary = "^2.9.5"
pandera = "^0.13.4"
erppeek = "^1.7.1"
sqlalchemy-utils = "^0.40.0"
dbt-postgres = "^1.4.4"
paramiko = "^3.0.0"
typer = "^0.7.0"
loguru = "^0.6.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.1.1"
black = "^23.1.0"
flake8 = "^6.0.0"
ipykernel = "^6.21.3"
markdown-include = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
